MG final commit

--- a/MarriageLicence/Views/Home/Index.cshtml
+++ b/MarriageLicence/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 
         @Html.ValidationSummary(false, "", new { @class = "text-danger" })
 
-        @using (Html.BeginForm("Home", "Index", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @id = "registrationForm", role = "form" }))
+        @using (Html.BeginForm("Index", "Home", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @id = "registrationForm", role = "form" }))
         {
             @Html.AntiForgeryToken()
 
@@ -231,6 +231,21 @@
 
             </div>
 
+            <div class="form-row">
+
+                <div class="form-group col-md-6">
+                    @Html.LabelFor(m => m.ApplicantPlaceOfBirth, new { @class = "form-label" })
+                    @Html.TextBoxFor(m => m.ApplicantPlaceOfBirth, new { @class = "form-control" })
+                </div>
+
+                <div class="form-group col-md-6">
+                    @Html.LabelFor(m => m.JointApplicantPlaceOfBirth, new { @class = "form-label" })
+                    @Html.TextBoxFor(m => m.JointApplicantPlaceOfBirth, new { @class = "form-control" })
+                </div>
+
+
+            </div>
+
 
             @*==============PARENT INFORMATION================================================================== *@
 
@@ -314,13 +329,13 @@
             <div class="form-row">
 
                 <div class="form-group col-md-6">
-                    @Html.LabelFor(m => m.ApplicantParent3PlaceOfBirth, new { @class = "form-label" })
-                    @Html.TextBoxFor(m => m.ApplicantParent3PlaceOfBirth, new { @class = "form-control" })
+                    @Html.LabelFor(m => m.ApplicantParent4PlaceOfBirth, new { @class = "form-label" })
+                    @Html.TextBoxFor(m => m.ApplicantParent4PlaceOfBirth, new { @class = "form-control" })
                 </div>
 
                 <div class="form-group col-md-6">
-                    @Html.LabelFor(m => m.JointApplicantParent3PlaceOfBirth, new { @class = "form-label" })
-                    @Html.TextBoxFor(m => m.JointApplicantParent3PlaceOfBirth, new { @class = "form-control" })
+                    @Html.LabelFor(m => m.JointApplicantParent4PlaceOfBirth, new { @class = "form-label" })
+                    @Html.TextBoxFor(m => m.JointApplicantParent4PlaceOfBirth, new { @class = "form-control" })
                 </div>
 
 
