--- a/MarriageLicence/Views/Home/Index.cshtml
+++ b/MarriageLicence/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
 
             <div class="form-row">
 
-                <h4>Intented Marriage Date and Location Information</h4>
+                <h4>Intended Marriage Date and Location Information</h4>
                 <br />
             </div>
 
